# KIO

./: .gitignore  BENCHMARKS_GO.md  BUILD_INSTRUCTIONS.md  BUILD_WITH_MODES.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  axeon.ebnf  axeon_build.py  build.sh  build_pro.sh  build_windows_vs.bat  build_windows_vs.sh  kio_build.py  run_all_examples.py  run_benchmarks.sh  run_benchmarks_java.sh  session.json  state.json
build4/: axeon-lsp
build_pro/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  kio-lsp
c_core/: abi.cpp  abi.h
docker/: Dockerfile
docs/: COMPLETE_REFERENCE.md  architecture.md  benchmarks.md  c_core_abi.md  examples.md  grammar.md  info.md  language-docs.md  language.md  modules.md  overview.md
docs/grammar/: kio.ebnf
examples/: 01_basics.axe  01_basics.kio  02_math.axe  02_math.kio  03_branching.axe  03_branching.kio  04_loops.axe  04_loops.kio  05_scopes.axe  05_scopes.kio  06_system_info.axe  06_system_info.kio  07_strings_concat.axe  07_strings_concat.kio  08_fizzbuzz.axe  08_fizzbuzz.kio  09_fibonacci.axe  09_fibonacci.kio  10_io_save_load.axe  10_io_save_load.kio  11_import_demo.axe  11_import_demo.kio  SimpleBenchmarkJava.java  advanced_syntax.axe  advanced_syntax.kio  aliases.ko  arithmetic_test.axe  arithmetic_test.kio  benchmark  benchmark.axe  benchmark.js  benchmark.kio  benchmark_axe.axe  benchmark_fast.axe  benchmark_js.js  benchmark_py.py  comparisons_test.axe  comparisons_test.kio  equality_test.kio  final_test.axe  (+50 more)
examples/modules/: array.axe  file.axe  math.axe  random.axe  time.axe
include/axeon/: ast.hpp  builtin_functions.hpp  bytecode.hpp  compiler.hpp  error_recovery.hpp  jit_compiler.hpp  jit_engine.hpp  memory_manager.hpp  parser.hpp  preprocessor.hpp  token.hpp  token_stream.hpp  tracing_jit.hpp  vm.hpp
include/axeon/lsp/: completion.hpp  diagnostics.hpp  document_manager.hpp  formatting.hpp  goto_definition.hpp  hover.hpp  lsp_server.hpp  semantic_tokens.hpp  types.hpp
include/axeon/network/: http_server.hpp
include/kio/: asm_helpers.hpp  ast.hpp  ast_visitor.hpp  builtin_functions.hpp  bytecode.hpp  compiler.hpp  config.hpp  error_recovery.hpp  interpreter.hpp  jit_compiler.hpp  jit_engine.hpp  lexer.hpp  memory_manager.hpp  module_system.hpp  optimizer.hpp  parallel_executor.hpp  parser.hpp  platform.hpp  token.hpp  token_stream.hpp  tracing_jit.hpp  type_system.hpp  vm.hpp
include/kio/lsp/: completion.hpp  diagnostics.hpp  document_manager.hpp  formatting.hpp  goto_definition.hpp  hover.hpp  lsp_server.hpp  semantic_tokens.hpp
include/kio/network/: http_server.hpp
lsp/: package.json
lsp/syntaxes/: kio.tmLanguage.json
scripts/: bench_axeon.axe  bench_compare.py  bench_js.js  build.sh  check_layout.cpp  clean_build.sh  install_kio.sh  install_ubuntu.sh  setup.sh
scripts/bench/: run_bench_go.sh  run_benchmarks.sh
scripts/linux/: install_debian.sh  install_rpm.sh
scripts/mac/: install_macos.sh
scripts/win/: build_win32.bat  build_win64.bat
src/: builtin_functions.cpp  config.cpp  interpreter.cpp  jit_compiler.cpp  lexer.cpp  main.cpp  memory_manager.cpp  module_system.cpp  optimizer.cpp  parallel_executor.cpp  parser.cpp  type_system.cpp
src/compiler/: compiler.cpp  jit_engine.cpp  memory_manager.cpp  parallel_executor.cpp  tracing_jit.cpp  type_system.cpp
src/core/: builtin_functions.cpp  config.cpp  interpreter.cpp  main.cpp  module_system.cpp  platform.cpp  type_impl.cpp  value.cpp
src/crypto/: aes.cpp  sha256.cpp
src/data/: token.cpp
src/database/: db_driver.cpp
src/features/: fast_jit.cpp  jit_compiler.cpp  jit_engine.cpp  jit_engine_stub.cpp  memory_manager.cpp  optimizer.cpp  parallel_executor.cpp  tracing_jit.cpp  tracing_jit_v8.cpp  type_system.cpp
src/gpu/: gpu_bridge.cpp
src/gui/: gui_bridge.cpp
src/language/: error_recovery.cpp  lexer.cpp  parser.cpp  parser_extensions.cpp  preprocessor.cpp  token.cpp  token_stream.cpp
src/libs/: db_driver.cpp  sha256.cpp  vector_ops.cpp
src/lsp/: completion.cpp  diagnostics.cpp  document_manager.cpp  formatting.cpp  goto_definition.cpp  hover.cpp  lsp_server.cpp  main.cpp  semantic_tokens.cpp
src/misc/: gmp_bridge.cpp
src/network/: http_server.cpp
src/parser/: ast_visitor.cpp  error_recovery.cpp  parser.cpp  parser_extensions.cpp
src/platform/wasm/: wasm_bridge.cpp
src/runtime/: ast_visitor.hpp  builtin_functions.cpp  builtin_functions.hpp  error_recovery.hpp  interpreter.cpp  interpreter.hpp  lexer.hpp  main.cpp  module_system.cpp  optimizer.hpp  parser.hpp  platform.hpp  token.hpp  type_system.hpp  value.cpp
src/tokenizer/: lexer.cpp  preprocessor.cpp  token_stream.cpp
src/tools/: completion.cpp  document_manager.cpp  lsp_server.cpp  semantic_tokens.cpp
src/vector/: vector_ops.cpp
src/vm/: chunk.hpp  compiler.cpp  opcode.hpp  vm.cpp
vscode-extension/: README.md  language-configuration.json  package.json  tsconfig.json
vscode-extension/fileicons/: kio-icon-theme.json
vscode-extension/icons/: axeon-icon-theme.json
vscode-extension/snippets/: axeon.json  kio.json
vscode-extension/src/: colorProvider.ts  completionProvider.ts  debugProvider.ts  extension.ts  formattingProvider.ts  liveShareProvider.ts  refactoringProvider.ts  replProvider.ts
vscode-extension/syntaxes/: axeon.tm.json  kio.tmLanguage.json
vscode-extension/themes/: axeon-monokai.json
